style: fix red bg color in dark mode for avaliability badge

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   --open-to-work-green-grad-2: #21554E;
   
   --working-red-l: #ffefef;
-  --working-red-d: #1f2822;
+  --working-red-d: #281f1f;
   
   --working-red-grad-1: #e45151;
   --working-red-grad-2: #552121;
